==2011-06==
* Implemented library window
* Implemented drop of library items
* Updated connector images

==2011-05==
* Removed AVAILABLE PORTS disclosure triangle and port names with port types
* Improved printing, display canvases are now displays centered and single-page always
* Fixed printing
* Fixed getImage, the front buffer is now used
* Fixed canvas display link trouble, canvases are no longer sleeping when they shouldn't
* Fixed errors around glCopyTexSubImage2D
* Fixed resize flickering (THIS ONE WAS HARD), CGL doesn't like multithreading+backbuffer rendering
* Fixed canvas copy
* Added support for detecting default shaderEnable value
* Fixed template chooser scroll problem
* Added preservation of emulation window available ports expansion state
* Enabled disclosure triangle for AVAILABLE PORTS (hidden by default)
* Implemented available port label and location
* Added support for canvas delete commands
* Modified State: to Format: and Type: label for emulation item disk images and ports
* Added emulation window available port group
* Added emulation window available port status message
* Verified and checked dragging for all cases
* Improved ROM so it is saved if the ROM resides in the emulation
* Added donation window
* Implemented canvas copy with glReadPixels
* Implemented canvas printing
* Disabled printing for emulation window
* Improved CanvasView so it updates the canvas on initialization
* Improved device mount logic: all storages are first tried for available, if none is available, the first is selected for remounting
* Implemented multi-storage devices
* Improved overlay
* Improved OpenGLCanvas configuration logic
* Implemented paper canvas postImage
* Implemented OEImage overlay and clipping
* Implemented paper canvas update when paper size changes
* Fixed paper canvas size getting stuck
* Implemented CanvasView paper scrolling
* Defined paper vertical clip region
* Added OpenGL paper canvas page separator