@@ -1,11 +1,7 @@
 ==To-Do==
-* Implement hardware library
-* Implement OEEmulation testAddEDL
+* Implement delete of devices through Edit>Delete, or CMD+BACKSPACE
 * Implement OEEmulation addEDL
 * Implement OEEmulation removeDevice
-* Implement device dragging to the emulation window by checking testAddEDL
-* Implement delete of devices through Edit>Delete, or CMD+BACKSPACE
-* Implement adding of devices in a daisy chain (when port and connector are of the same kind)
 * Implement removal of devices in a daisy chain (when port and connector are of the same kind)
 * Implement disk image file locking, if the disk image is writable (flock)
 
