@@ -1,0 +1,19 @@
+
+/**
+ * OpenEmulator
+ * Mac OS X Library Table View
+ * (C) 2011 by Marc S. Ressl (mressl@umich.edu)
+ * Released under the GPL
+ *
+ * Controls the library table view.
+ */
+
+#import "LibraryTableView.h"
+
+@implementation LibraryTableView
+
+- (void)highlightSelectionInClipRect:(NSRect)clipRect
+{
+}
+
+@end
