@@ -1,4 +1,5 @@
 ==2011-06==
+* Implemented library window filtering
 * Implemented library window
 * Implemented drop of library items
 * Updated connector images
